src/objects/Plan_Association__c.object
<CustomObject>
    <description>To be used to capture relationships between contacts and Plans</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>NOT( Contact_Relationship_End_Date__c &lt;=  TODAY()) || ISBLANK(Contact_Relationship_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_End_Date__c</fullName>
        <label>Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_Start_Date__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AML Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member/Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related third party primary contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Plan_Account_Relationships_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution List</label>
        <referenceTo>Distribution_List__c</referenceTo>
        <relationshipName>Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_Org_Name__c</fullName>
        <label>Historical Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Investment if the plan is unknown</inlineHelpText>
        <label>Client Investment</label>
        <referenceTo>Account__c</referenceTo>
        <relationshipName>Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Relate an Organization to this Plan or Investment if a Contact is unknown.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Plan_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>Plan_Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Organization Role</label>
        <picklist>
            <picklistValues>
                <fullName>Investment_Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracting Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custody Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Dilligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Cost Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <formula>Investment__r.Portfolio__r.Strategy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategy</label>
        <type>Text</type>
    </fields>
    <label>Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Related Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associations</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CRT_Check</fullName>
        <active>true</active>
        <errorConditionFormula>CRT__c = TRUE

&amp;&amp; 

ISBLANK( Distribution_List__c )

&amp;&amp;

(NOT(ISBLANK(Contact__c)))

&amp;&amp; 

ISBLANK (Contact__r.Email)</errorConditionFormula>
        <errorDisplayField>CRT__c</errorDisplayField>
        <errorMessage>If CRT is checked, then Contact should have an email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Role_required_for_Contact</fullName>
        <active>true</active>
        <description>This rule will ensure that user enters the contact role if Contact is selected.</description>
        <errorConditionFormula>AND( AND(ISBLANK( Contact__c ),ISBLANK(Distribution_List__c)), NOT(ISBLANK(TEXT( Contact_Role__c ))))
|| 
AND( OR(NOT(ISBLANK( Contact__c )),NOT(ISBLANK(Distribution_List__c))), ISBLANK(TEXT( Contact_Role__c )))</errorConditionFormula>
        <errorMessage>Please enter both Contact/DL and Contact Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ForceSelectionofEitherDLorContact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Contact__c  &lt;&gt; NULL,  Distribution_List__c &lt;&gt; NULL)</errorConditionFormula>
        <errorMessage>Please enter a contact or a DL, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Org_role_is_required_for_org_association</fullName>
        <active>true</active>
        <description>This rule will ensure that user enters the org role if org is selected.</description>
        <errorConditionFormula>AND(ISBLANK(Contact__c),ISBLANK(Distribution_List__c), NOT(ISBLANK(Organization1__c)), ISBLANK(Role__c))</errorConditionFormula>
        <errorMessage>Please enter Organization Role</errorMessage>
    </validationRules>
</CustomObject>